[gd_scene load_steps=31 format=3 uid="uid://bb5abxm4foa3j"]

[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/tab_cells.gd" id="1_c4xwt"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/cell_index.gd" id="2_84jav"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/box_draw.gd" id="2_5521f"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/sprite_index.gd" id="2_b7bbx"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/box_display_toggle.gd" id="2_iyh46"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/onion_skin_cell.gd" id="3_d6ka5"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/box_list.gd" id="3_f1ar8"]
[ext_resource type="Texture2D" uid="uid://b55dw07xg72c3" path="res://GRAPHICS/CHECKERBOARD.PNG" id="3_sw61b"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/sprite_offset_x.gd" id="3_w74q5"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/sprite_offset_y.gd" id="4_lq7mp"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/display_regions.gd" id="7_5lhow"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/allow_edits.gd" id="7_8fqow"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/box_type.gd" id="7_yvfy8"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/box_offset_x.gd" id="8_o3eoa"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/box_offset_y.gd" id="9_6e5ym"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/box_width.gd" id="10_p4nda"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/box_delete.gd" id="11_3nl3y"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/box_draw_mode.gd" id="11_f6mab"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/box_height.gd" id="11_yct21"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/preview_sprite.gd" id="15_ex61n"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/box_crop_visibility.gd" id="16_7b752"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/preview.gd" id="16_mkc88"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/preview_parent.gd" id="16_mp6fd"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/box_crop_offset_x.gd" id="16_xv178"]
[ext_resource type="Material" uid="uid://stjyil5uw5j4" path="res://SCENES/TABS/SHARED/mat_shared_palette.material" id="17_5g0bd"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/box_crop_offset_y.gd" id="17_7suun"]
[ext_resource type="Shader" path="res://palette.gdshader" id="18_8jtcf"]
[ext_resource type="Script" path="res://SCENES/TABS/SHARED/CELLS/onion_skin_sprite.gd" id="18_30r44"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_imj6l"]
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k4855"]
shader = ExtResource("18_8jtcf")
shader_parameter/hover_index = -1
shader_parameter/highlight = null
shader_parameter/palette = PackedInt32Array()

[node name="cells" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_c4xwt")
metadata/_tab_index = 1

[node name="content" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="scroll" type="ScrollContainer" parent="content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="margin" type="MarginContainer" parent="content/scroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="data" type="VBoxContainer" parent="content/scroll/margin"]
layout_mode = 2
size_flags_horizontal = 3

[node name="cell" type="HBoxContainer" parent="content/scroll/margin/data"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="content/scroll/margin/data/cell"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cell #"

[node name="value" type="SpinBox" parent="content/scroll/margin/data/cell"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2
script = ExtResource("2_84jav")

[node name="onion" type="HBoxContainer" parent="content/scroll/margin/data"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="content/scroll/margin/data/onion"]
layout_mode = 2
size_flags_horizontal = 3
text = "Onion Skin #"

[node name="value" type="SpinBox" parent="content/scroll/margin/data/onion"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2
script = ExtResource("3_d6ka5")

[node name="onion_in_front" type="HBoxContainer" parent="content/scroll/margin/data"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="content/scroll/margin/data/onion_in_front"]
layout_mode = 2
size_flags_horizontal = 3
text = "Onion Skin in front"

[node name="check" type="CheckButton" parent="content/scroll/margin/data/onion_in_front"]
layout_mode = 2

[node name="sprite_info" type="VBoxContainer" parent="content/scroll/margin/data"]
layout_mode = 2

[node name="title_bar" type="HBoxContainer" parent="content/scroll/margin/data/sprite_info"]
layout_mode = 2

[node name="left" type="HSeparator" parent="content/scroll/margin/data/sprite_info/title_bar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="title" type="Label" parent="content/scroll/margin/data/sprite_info/title_bar"]
layout_mode = 2
size_flags_horizontal = 4
text = "Sprite Info"

[node name="right" type="HSeparator" parent="content/scroll/margin/data/sprite_info/title_bar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="index" type="HBoxContainer" parent="content/scroll/margin/data/sprite_info"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="content/scroll/margin/data/sprite_info/index"]
layout_mode = 2
size_flags_horizontal = 3
text = "Index"

[node name="value_index" type="SpinBox" parent="content/scroll/margin/data/sprite_info/index"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Controls which sprite number this cell will display in game."
alignment = 2
script = ExtResource("2_b7bbx")

[node name="offset_x" type="HBoxContainer" parent="content/scroll/margin/data/sprite_info"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="content/scroll/margin/data/sprite_info/offset_x"]
layout_mode = 2
size_flags_horizontal = 3
text = "Offset X"

[node name="value_x" type="SpinBox" parent="content/scroll/margin/data/sprite_info/offset_x"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -32768.0
max_value = 32767.0
alignment = 2
suffix = "px"
script = ExtResource("3_w74q5")

[node name="offset_y" type="HBoxContainer" parent="content/scroll/margin/data/sprite_info"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="content/scroll/margin/data/sprite_info/offset_y"]
layout_mode = 2
size_flags_horizontal = 3
text = "Offset Y"

[node name="value_y" type="SpinBox" parent="content/scroll/margin/data/sprite_info/offset_y"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -32768.0
max_value = 32767.0
alignment = 2
suffix = "px"
script = ExtResource("4_lq7mp")

[node name="boxes" type="VBoxContainer" parent="content/scroll/margin/data"]
layout_mode = 2

[node name="title_bar" type="HBoxContainer" parent="content/scroll/margin/data/boxes"]
layout_mode = 2

[node name="left" type="HSeparator" parent="content/scroll/margin/data/boxes/title_bar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="title" type="Label" parent="content/scroll/margin/data/boxes/title_bar"]
layout_mode = 2
size_flags_horizontal = 4
text = "Boxes"

[node name="right" type="HSeparator" parent="content/scroll/margin/data/boxes/title_bar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="visibility" type="HBoxContainer" parent="content/scroll/margin/data/boxes"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="content/scroll/margin/data/boxes/visibility"]
layout_mode = 2
text = "Display"

[node name="check" type="CheckButton" parent="content/scroll/margin/data/boxes/visibility" node_paths=PackedStringArray("box_draw_node", "editable_parent")]
layout_mode = 2
size_flags_horizontal = 10
button_pressed = true
script = ExtResource("2_iyh46")
box_draw_node = NodePath("../../../../../../visualizer/borders/clipper/visualizer/origin/box_parent")
editable_parent = NodePath("../../editable")

[node name="editable" type="VBoxContainer" parent="content/scroll/margin/data/boxes"]
layout_mode = 2

[node name="regions" type="HBoxContainer" parent="content/scroll/margin/data/boxes/editable"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="content/scroll/margin/data/boxes/editable/regions"]
layout_mode = 2
text = "Display Sprite Regions"

[node name="check" type="CheckButton" parent="content/scroll/margin/data/boxes/editable/regions"]
layout_mode = 2
size_flags_horizontal = 10
script = ExtResource("7_5lhow")

[node name="allow_edits" type="HBoxContainer" parent="content/scroll/margin/data/boxes/editable"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="content/scroll/margin/data/boxes/editable/allow_edits"]
layout_mode = 2
text = "Allow Editing"

[node name="check" type="CheckButton" parent="content/scroll/margin/data/boxes/editable/allow_edits"]
layout_mode = 2
size_flags_horizontal = 10
script = ExtResource("7_8fqow")

[node name="list" type="ScrollContainer" parent="content/scroll/margin/data/boxes/editable"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2

[node name="items" type="ItemList" parent="content/scroll/margin/data/boxes/editable/list"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
allow_reselect = true
allow_search = false
script = ExtResource("3_f1ar8")

[node name="draw_delete" type="HBoxContainer" parent="content/scroll/margin/data/boxes/editable"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="draw" type="Button" parent="content/scroll/margin/data/boxes/editable/draw_delete"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Draw Mode"
script = ExtResource("11_f6mab")

[node name="delete" type="Button" parent="content/scroll/margin/data/boxes/editable/draw_delete"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"
script = ExtResource("11_3nl3y")

[node name="type" type="HBoxContainer" parent="content/scroll/margin/data/boxes/editable"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="content/scroll/margin/data/boxes/editable/type"]
layout_mode = 2
size_flags_horizontal = 3
text = "Type"

[node name="value" type="SpinBox" parent="content/scroll/margin/data/boxes/editable/type" groups=["box_editors"]]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2
editable = false
script = ExtResource("7_yvfy8")

[node name="offset_x" type="HBoxContainer" parent="content/scroll/margin/data/boxes/editable"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="content/scroll/margin/data/boxes/editable/offset_x"]
layout_mode = 2
size_flags_horizontal = 3
text = "Offset X"

[node name="value" type="SpinBox" parent="content/scroll/margin/data/boxes/editable/offset_x" groups=["box_editors"]]
layout_mode = 2
size_flags_horizontal = 3
min_value = -32768.0
max_value = 32767.0
alignment = 2
editable = false
script = ExtResource("8_o3eoa")

[node name="offset_y" type="HBoxContainer" parent="content/scroll/margin/data/boxes/editable"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="content/scroll/margin/data/boxes/editable/offset_y"]
layout_mode = 2
size_flags_horizontal = 3
text = "Offset Y"

[node name="value" type="SpinBox" parent="content/scroll/margin/data/boxes/editable/offset_y" groups=["box_editors"]]
layout_mode = 2
size_flags_horizontal = 3
min_value = -32768.0
max_value = 32767.0
alignment = 2
editable = false
script = ExtResource("9_6e5ym")

[node name="width" type="HBoxContainer" parent="content/scroll/margin/data/boxes/editable"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="content/scroll/margin/data/boxes/editable/width"]
layout_mode = 2
size_flags_horizontal = 3
text = "Width"

[node name="value" type="SpinBox" parent="content/scroll/margin/data/boxes/editable/width" groups=["box_editors"]]
layout_mode = 2
size_flags_horizontal = 3
max_value = 65535.0
alignment = 2
editable = false
script = ExtResource("10_p4nda")

[node name="height" type="HBoxContainer" parent="content/scroll/margin/data/boxes/editable"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="title" type="Label" parent="content/scroll/margin/data/boxes/editable/height"]
layout_mode = 2
size_flags_horizontal = 3
text = "Height"

[node name="value" type="SpinBox" parent="content/scroll/margin/data/boxes/editable/height" groups=["box_editors"]]
layout_mode = 2
size_flags_horizontal = 3
max_value = 65535.0
alignment = 2
editable = false
script = ExtResource("11_yct21")

[node name="crop_offset_x" type="HBoxContainer" parent="content/scroll/margin/data/boxes/editable"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
script = ExtResource("16_7b752")

[node name="title" type="Label" parent="content/scroll/margin/data/boxes/editable/crop_offset_x"]
layout_mode = 2
size_flags_horizontal = 3
text = "Region Offset X"

[node name="value" type="SpinBox" parent="content/scroll/margin/data/boxes/editable/crop_offset_x" groups=["box_editors"]]
layout_mode = 2
size_flags_horizontal = 3
max_value = 65535.0
alignment = 2
editable = false
script = ExtResource("16_xv178")

[node name="crop_offset_y" type="HBoxContainer" parent="content/scroll/margin/data/boxes/editable"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
script = ExtResource("16_7b752")

[node name="title" type="Label" parent="content/scroll/margin/data/boxes/editable/crop_offset_y"]
layout_mode = 2
size_flags_horizontal = 3
text = "Region Offset Y"

[node name="value" type="SpinBox" parent="content/scroll/margin/data/boxes/editable/crop_offset_y" groups=["box_editors"]]
layout_mode = 2
size_flags_horizontal = 3
max_value = 65535.0
alignment = 2
editable = false
script = ExtResource("17_7suun")

[node name="v_sep" type="VSeparator" parent="content"]
layout_mode = 2

[node name="visualizer" type="VBoxContainer" parent="content"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="title" type="Label" parent="content/visualizer"]
layout_mode = 2
text = "Preview"

[node name="borders" type="PanelContainer" parent="content/visualizer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_imj6l")

[node name="clipper" type="PanelContainer" parent="content/visualizer/borders" node_paths=PackedStringArray("visualizer", "box_parent")]
texture_filter = 1
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("16_mp6fd")
visualizer = NodePath("visualizer")
box_parent = NodePath("visualizer/origin/box_parent")

[node name="visualizer" type="Node2D" parent="content/visualizer/borders/clipper"]
position = Vector2(400, 400)
script = ExtResource("16_mkc88")

[node name="background" type="TextureRect" parent="content/visualizer/borders/clipper/visualizer"]
custom_minimum_size = Vector2(6000, 6000)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3000.0
offset_top = -3000.0
offset_right = 3000.0
offset_bottom = 3000.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_sw61b")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="origin" type="Control" parent="content/visualizer/borders/clipper/visualizer"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="guide" type="ColorRect" parent="content/visualizer/borders/clipper/visualizer/origin"]
modulate = Color(1, 1, 1, 0.313726)
show_behind_parent = true
custom_minimum_size = Vector2(2, 4000)
layout_mode = 0
offset_left = -1.0
offset_top = -2000.0
offset_right = 1.0
offset_bottom = 2000.0
mouse_filter = 2

[node name="guide_horz" type="ColorRect" parent="content/visualizer/borders/clipper/visualizer/origin/guide"]
show_behind_parent = true
custom_minimum_size = Vector2(2000, 2)
layout_mode = 0
offset_left = -2000.0
offset_top = 1999.0
offset_right = 2000.0
offset_bottom = 2001.0
mouse_filter = 2

[node name="onion" type="Sprite2D" parent="content/visualizer/borders/clipper/visualizer/origin"]
material = SubResource("ShaderMaterial_k4855")
position = Vector2(-128, -128)
centered = false
script = ExtResource("18_30r44")

[node name="sprite" type="Sprite2D" parent="content/visualizer/borders/clipper/visualizer/origin"]
material = ExtResource("17_5g0bd")
position = Vector2(-128, -128)
centered = false
script = ExtResource("15_ex61n")

[node name="box_parent" type="Control" parent="content/visualizer/borders/clipper/visualizer/origin" node_paths=PackedStringArray("box_type")]
anchors_preset = 0
mouse_filter = 2
script = ExtResource("2_5521f")
box_type = NodePath("../../../../../../scroll/margin/data/boxes/editable/type/value")

[node name="cross_v2" type="ColorRect" parent="content/visualizer/borders/clipper/visualizer/origin"]
z_index = 1
layout_mode = 0
offset_left = -2.0
offset_top = -21.0
offset_right = 2.0
offset_bottom = 21.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="cross_h2" type="ColorRect" parent="content/visualizer/borders/clipper/visualizer/origin"]
z_index = 1
layout_mode = 0
offset_left = -21.0
offset_top = -2.0
offset_right = 21.0
offset_bottom = 2.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="cross_v" type="ColorRect" parent="content/visualizer/borders/clipper/visualizer/origin"]
z_index = 1
layout_mode = 0
offset_left = -1.0
offset_top = -20.0
offset_right = 1.0
offset_bottom = 20.0
mouse_filter = 2

[node name="cross_h" type="ColorRect" parent="content/visualizer/borders/clipper/visualizer/origin"]
z_index = 1
layout_mode = 0
offset_left = -20.0
offset_top = -1.0
offset_right = 20.0
offset_bottom = 1.0
mouse_filter = 2

[connection signal="disable_onion_skin" from="content/scroll/margin/data/onion/value" to="content/visualizer/borders/clipper/visualizer/origin/onion" method="on_onion_skin_disable"]
[connection signal="update_onion_skin" from="content/scroll/margin/data/onion/value" to="content/visualizer/borders/clipper/visualizer/origin/onion" method="on_onion_skin_update"]
[connection signal="toggled" from="content/scroll/margin/data/onion_in_front/check" to="content/visualizer/borders/clipper/visualizer/origin/onion" method="on_toggle_front"]
[connection signal="box_changed" from="content/visualizer/borders/clipper/visualizer/origin/box_parent" to="." method="on_box_changed"]
